fix: Products layout issues on mobile

--- a/src/features/Products/products.module.styl
+++ b/src/features/Products/products.module.styl
@@ -16,12 +16,14 @@
   width 40%
   +$below(md)
     margin-left 0
-    width 60%
+    width 90%
 
   h1
     line-height 1.2em
     margin-bottom 28px
     width 280px
+    +$below(md)
+      width 100%
 
   .copy
     line-height 1.5em
